fix: color-danger-contrast

--- a/app/assets/stylesheets/utils/_color.scss
+++ b/app/assets/stylesheets/utils/_color.scss
@@ -73,3 +73,7 @@
 .color-warning-contrast {
   color: var(--warning-text-color);
 }
+
+.color-danger-contrast {
+  color: var(--sn-stylekit-danger-contrast-color);
+}
